<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrew.gawoski.summonertimers.DisclaimerActivity"
    android:background="@color/demacia_blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/demacia_gold"
        android:padding="2dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/demacia_blue"
            android:padding="32dp"
            android:weightSum="5">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/demacia_gold"
                android:layout_weight="1"
                android:padding="2dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/demacia_blue"
                    android:padding="4dp">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/scrollView"
                        android:background="#ffffff"
                        android:layout_margin="2dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="4dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/disclaimer1"
                                android:id="@+id/textView"
                                android:paddingBottom="8dp"
                                android:textColor="#000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/disclaimer2"
                                android:id="@+id/textView2"
                                android:paddingBottom="8dp"
                                android:textColor="#000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/disclaimer3"
                                android:id="@+id/textView3"
                                android:textColor="#000000" />
                        </LinearLayout>
                    </ScrollView>

                </FrameLayout>
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"></RelativeLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/demacia_gold"
                android:layout_weight="4"
                android:padding="2dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:background="@color/demacia_blue">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/disclaimerButton"
                        android:id="@+id/buttonDisclaimer"
                        android:background="@color/demacia_button_blue"
                        android:layout_margin="2dp"
                        android:clickable="true"
                        android:onClick="beginEntryChoice"/>
                </FrameLayout>
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
