<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrew.gawoski.summonertimers.MainActivity"
    android:background="@color/demacia_blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/demacia_gold"
        android:padding="2dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/demacia_blue"
            android:weightSum="4"
            android:focusable="false"
            android:showDividers="beginning|middle|end"
            android:padding="32dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@color/demacia_gold"
                android:padding="2dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/demacia_blue"
                    android:padding="4dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/buttonAutomatic"
                        android:id="@+id/buttonAutomatic"
                        android:background="@color/demacia_button_blue"
                        android:layout_margin="2dp"
                        android:onClick="chooseAutoEntry"/>
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@color/demacia_gold"
                android:padding="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/demacia_blue"
                    android:padding="4dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/buttonManual"
                        android:id="@+id/buttonManual"
                        android:background="@color/demacia_button_blue"
                        android:layout_margin="2dp"
                        android:onClick="chooseManualEntry" />

                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@color/demacia_gold"
                android:padding="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/demacia_blue"
                    android:padding="4dp" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/buttonSettings"
                        android:id="@+id/button"
                        android:background="@color/demacia_button_blue"
                        android:layout_margin="2dp"
                        android:onClick="chooseSettings" />
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@color/demacia_gold"
                android:padding="2dp"
                android:layout_marginTop="8dp" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/demacia_blue"
                    android:padding="4dp" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/buttonAbout"
                        android:id="@+id/button2"
                        android:background="@color/demacia_button_blue"
                        android:layout_margin="2dp"
                        android:onClick="chooseAbout" />
                </FrameLayout>
            </FrameLayout>

        </LinearLayout>

    </FrameLayout>
</RelativeLayout>
